// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fetchProfile fails if a bad profile JSON is passed in 1`] = `[Error: The profile’s JSON could not be decoded. The full error information has been printed out to the DevTool’s console.]`;

exports[`fetchProfile fails if a bad profile JSON is passed in 2`] = `
Array [
  Array [
    "The profile’s JSON could not be decoded.",
  ],
  Array [
    "JSON parsing error:",
    [SyntaxError: Unexpected token 'i', "invalid" is not valid JSON],
  ],
  Array [
    "Fetch response:",
    Response {},
  ],
]
`;

exports[`fetchProfile fails if a bad profile JSON is passed in, with no content type 1`] = `[Error: The profile’s JSON could not be decoded. The full error information has been printed out to the DevTool’s console.]`;

exports[`fetchProfile fails if a bad profile JSON is passed in, with no content type 2`] = `
Array [
  Array [
    "The profile’s JSON could not be decoded.",
  ],
  Array [
    "JSON parsing error:",
    [SyntaxError: Unexpected token 'i', "invalid" is not valid JSON],
  ],
  Array [
    "Fetch response:",
    Response {},
  ],
]
`;

exports[`fetchProfile fails if a bad zip file is passed in 1`] = `[Error: Unable to open the archive file. The full error information has been printed out to the DevTool’s console.]`;

exports[`fetchProfile fails if a bad zip file is passed in 2`] = `
Array [
  Array [
    "Unable to open the archive file.",
  ],
  Array [
    "Error:",
    [Error: Can't find end of central directory : is this a zip file ? If it is, see https://stuk.github.io/jszip/documentation/howto/read_zip.html],
  ],
  Array [
    "Fetch response:",
    Response {},
  ],
]
`;
